fix contrast on gauge

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -250,7 +250,7 @@ h4 {
 #main-panel #cat-list {
   visibility: hidden;
   position: absolute;
-  top: 140px; 
+  top: 120px; 
   text-align: center;
 }
 
